fixed padding bleeding into navigation above 768px

--- a/SASS/component/_grid.scss
+++ b/SASS/component/_grid.scss
@@ -613,5 +613,7 @@ body[data-nav="true"] > main{
 }
 
 .work{
-  padding-top: 5rem;
+  @media (max-width:769px){
+    padding-top: 5rem;
+  }
 }
